--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,17 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
+title: tyrano's blog
+subtitle: "korean developer tyrano's blog"
+email: tyrano09@gmail.com
+name: Young-jin Choi
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  korean developer interested in android, education, human.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "http://tyranotyrano.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
